# bioinformatics-semantic-search

./: .env.example  .gitignore  .gitmodules  README.md  TESTING.md  bioinfo_assistant_gemini.py  create_collection.py  query_data.py  requirements.txt  test_vector_search.py  test_with_local_llm.py
mcp_system/: README.md
mcp_system/gemini-mcp-client/: README.md  client.py  pyproject.toml
qdrant_db/: README.md  README_LANGCHAIN.md  biotools_python_tools.json  biotools_scraper.py  create_collection.py  gemini_integration.py  langchain_data_loader.py  lc_qdrant.py  query_data.py  upload_data.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/OmiyDB/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/OmiyDB/0/segments/02d49bf6-4474-4657-b3c2-cc8a2d4d9ecd/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/OmiyDB/0/segments/3a21a160-f8a7-44f0-8b59-7ff1faa0f1d6/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/OmiyDB/0/segments/bbb8e09e-772d-44a9-91b8-73cf58d5c98f/: IDENTITY  LOG  MANIFEST-000005  mutable_id_tracker.mappings
qdrant_storage/collections/OmiyDB/0/segments/e006386c-0bdf-4cee-85b1-90d1ddad1c84/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/OmiyDB/0/segments/ec8b61a1-1783-4c99-80f5-0a462bba7f30/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/OmiyDB/0/segments/f226f371-829d-49a4-8988-1c5fa0147ac4/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/OmiyDB/0/segments/fab290e1-a6bf-4de1-9ede-f758598f1cfa/: IDENTITY  LOG  (+1 more)
rag_system/: demo.py  rag_agent.py  rag_utils.py
(+27 files in other folders)
